Quality: Fix deprecated Locale APIs, add AUTHORS/BUILD_DATE to JScienceVersion